k8s/dev/backend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/manqo/fastapi-traefik-datascientest-project-backend:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 8000
        # Lädt alle Umgebungsvariablen (DB-Passwort, Host etc.) aus der ConfigMap
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
