k8s/dev/frontend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend

        image: ghcr.io/luca10112/fastapi-traefik-datascientest-project-frontend:latest

        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
